updating html and styles

--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
   
   <div class="content-text">
     <h1 class="header">FAQ</h1>
-    <a class="reveal-elements" href="#">How many team members can I invite?</a>
+    <button class="reveal-elements">How many team members can I invite?</button>
       <p class="element">You can invite up to 2 additional users on the Free plan. There is no limit on 
       team members for the Premium plan.</p><hr>
 
-    <a class="reveal-elements" href="#">What is the maximum file upload size?</a>
+    <button class="reveal-elements">What is the maximum file upload size?</button>
      <p class="element">No more than 2GB. All files in your account must fit your allotted storage space.</p><hr>
 
-    <a class="reveal-elements" href="#">How do I reset my password?</a>
+    <button class="reveal-elements">How do I reset my password?</button>
      <p class="element">Click “Forgot password” from the login page or “Change password” from your profile page.
       A reset link will be emailed to you.</p><hr>
 
-    <a class="reveal-elements" href="#">Can I cancel my subscription?</a>
+    <button class="reveal-elements">Can I cancel my subscription?</button>
      <p class="element">Yes! Send us a message and we’ll process your request no questions asked.</p><hr>
 
-    <a class="reveal-elements" href="#">Do you provide additional support?</a>
+    <button class="reveal-elements">Do you provide additional support?</button>
      <p class="element">Chat and email support is available 24/7. Phone lines are open during normal business hours.</p><hr>
  </div>
 </div>
