--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
   
   <div class="content-text">
     <h1 class="header">FAQ</h1>
+    <div class="faq">
     <button class="reveal-elements">How many team members can I invite?</button>
       <p class="element">You can invite up to 2 additional users on the Free plan. There is no limit on 
       team members for the Premium plan.</p><hr>
+    </div>
 
     <button class="reveal-elements">What is the maximum file upload size?</button>
      <p class="element">No more than 2GB. All files in your account must fit your allotted storage space.</p><hr>
